[package]
name = "i_float"
version = "1.12.0"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2024"
description = "This fixed float math library provides an efficient and deterministic solution for arithmetic and geometric operations."
license = "MIT"
repository = "https://github.com/iShape-Rust/iFloat"

[features]
default = ["float_point_compat"]
float_point_compat = []
glam = ["dep:glam"]
bin_key = ["dep:i_key_sort"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
glam = { optional = true, version = ">=0.27" }
i_key_sort = { optional = true, version = ">=0.5.0", default-features = false, features = ["bin_key"] }

[dev-dependencies]
rand = { version = "0.9.1", features = [] }