[package]
name = "i_float"
version = "1.14.0"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2024"
description = "This fixed float math library provides an efficient and deterministic solution for arithmetic and geometric operations."
license = "MIT"
repository = "https://github.com/iShape-Rust/iFloat"

[features]
default = ["core"]
core = ["float_pt"]
float_pt = []
glam = ["dep:glam"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "^1.0", default-features = false, features = ["derive"], optional = true }
glam = { optional = true, version = ">=0.27" }
libm = "^0.2"